--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,10 @@ a:hover {
 
 /* Hero Section */
 .hero-section {
-    padding: 40px 40px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    padding-right: 40px;
+    padding-left: 40px;
     background-color: var(--white);
     border-radius: 20px;
 }
@@ -87,7 +90,7 @@ a:hover {
 }
 
 .gate {
-    max-width: 100%;
+    max-width: 80%;
     height: auto;
     filter: grayscale(100%);
 }
@@ -291,10 +294,16 @@ footer a:hover {
 
 @media (max-width: 768px) {
     .container,
-    .hero-section,
     .products-section,
     .notice-section {
         padding: 20px 20px;
+    }
+
+    .hero-section {
+        padding-top: 0px;
+        padding-bottom: 0px;
+        padding-right: 20px;
+        padding-left: 20px;
     }
 
     .hero-content h1 {
